Add JavaDoc and fix some issues